fix picture on mobile

--- a/src/scss/index.module.scss
+++ b/src/scss/index.module.scss
@@ -129,13 +129,6 @@ footer {
     }
 }
 
-@media (max-width: 764px) {
-    .profileImg {
-        height: 200px;
-        width: 200px;
-    }
-}
-
 @media (max-height: 600px) {
     section.cv {
         padding: 15px;
